fixing coverage exclusions